nm-dialog: Fix icon spacing issue
- fixes #4928

Part-of: <https://gitlab.gnome.org/GNOME/gnome-shell/-/merge_requests/2309>
(cherry picked from commit 68653d5e61e382e9758ab698218260e4ace33968)

--- a/data/theme/gnome-shell-sass/widgets/_network-dialog.scss
+++ b/data/theme/gnome-shell-sass/widgets/_network-dialog.scss
@@ -15,6 +15,10 @@
 .nm-dialog-header-icon { icon-size: $large_icon_size;}
 .nm-dialog-header-hbox { spacing: 10px; }
 
+.nm-dialog-network-selected {
+  margin: 0 $base_margin*2;
+}
+
 .nm-dialog-scroll-view {
   padding:$base_padding;
   border-radius: $base_border_radius;
